2015-10-06  Andy Buckley  <andy.buckley@cern.ch>

	* Add professor2.utils module, providing an opportunistic use of
	OrderedDict for params so the params order required by Ipol is the
	same as the order in which they are specified in the (first run's)
	params.dat file.

	* Change Python-mapped Ipol methods with no args to be properties.

	* Add nice __repr__ methods for Histo and Bin objects.

	* Specialise Histo as IpolHisto and DataHisto, and provide
	toData{Histo,Bin} on IpolHisto and IpolBin respectively.

	* Remove ProfMaster.

2015-10-04  Andy Buckley  <andy.buckley@cern.ch>

	* Add protection of svd.setThreshold call to ensure it is
	supported/needed, via Eigen version number macros.

	* Add vmin and vmax args to Ipol and IpolBin in Python.

2015-10-02  Andy Buckley  <andy.buckley@cern.ch>

	* Put histo file reading in a try..except block so read failures
	on non-histo files in the run dirs are not fatal.

	* Add protection in the histo loader, so we don't trip up on
	Rivet's new cross-section and counter objects.

2015-09-30  Andy Buckley  <andy.buckley@cern.ch>

	* src/Ipol.h: Use Eigen/SVD include path rather than non-standard eigen3/Eigen/SVD.

2015-09-14  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Use Eigen's svd.setThreshold(1e-20) to prevent the errors we saw with Eigen
	3.2.2 and later when looking at 5th order polynomials in 3 dimensinos
	with 900+ anchors

	* Some clean up

2015-09-11  Andy Buckley  <andy.buckley@cern.ch>

	* Adding prof2-residuals script for ipol faithfulness testing.

	* Rename scripts from prof-* to prof2-* to allow parallel installations of Prof1 and Prof2.

	* Move some non-core scripts from bin to contrib.

	* Make root-config dependency optional

	* Lots of reworking to make prof-tune work again, and to use weight file parsing.

2015-09-10  Andy Buckley  <andy.buckley@cern.ch>

	* Use weight file path parsing in prof-ipol.

	* Add prof.weights submodule, with a copy of PointMatcher and a